--- a/my-recipe-app/package.json
+++ b/my-recipe-app/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~11.2.0",
     "@angular/platform-browser-dynamic": "~11.2.0",
     "@angular/router": "~11.2.0",
+    "angular-in-memory-web-api": "^0.11.0",
     "autoprefixer": "^10.2.5",
     "postcss": "^8.2.8",
     "rxjs": "~6.6.0",
