setup for gitignore, hopefully

--- a/my-recipe-app/package.json
+++ b/my-recipe-app/package.json
@@ -2,9 +2,10 @@
   "name": "my-recipe-app",
   "version": "0.0.0",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
+      "ng": "ng",
+      "config": "ts-node ./scripts/setenv.ts",
+      "start": "npm run config -- --environment=dev && ng serve",
+      "build": "npm run config -- --environment=prod && ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
