--- a/my-recipe-app/package.json
+++ b/my-recipe-app/package.json
@@ -2,10 +2,10 @@
   "name": "my-recipe-app",
   "version": "0.0.0",
   "scripts": {
-      "ng": "ng",
-      "config": "ts-node ./scripts/setenv.ts",
-      "start": "npm run config -- --environment=dev && ng serve",
-      "build": "npm run config -- --environment=prod && ng build",
+    "ng": "ng",
+    "config": "ts-node ./scripts/setenv.ts",
+    "start": "npm run config -- --environment=dev && ng serve",
+    "build": "npm run config -- --environment=prod && ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -34,6 +34,7 @@
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
+    "dotenv": "^8.2.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.1.0",
@@ -45,6 +46,7 @@
     "tailwindcss": "^2.0.4",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.1.2"
+    "typescript": "~4.1.2",
+    "yargs": "^16.2.0"
   }
 }
