add font-awesome, route to list page

--- a/my-recipe-app/package.json
+++ b/my-recipe-app/package.json
@@ -20,6 +20,11 @@
     "@angular/platform-browser": "~11.2.0",
     "@angular/platform-browser-dynamic": "~11.2.0",
     "@angular/router": "~11.2.0",
+    "@fortawesome/angular-fontawesome": "^0.8.2",
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-brands-svg-icons": "^5.15.2",
+    "@fortawesome/free-regular-svg-icons": "^5.15.2",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@ngrx/store": "^12.3.0",
     "angular-in-memory-web-api": "^0.11.0",
     "autoprefixer": "^10.2.5",
