--- a/my-recipe-app/angular.json
+++ b/my-recipe-app/angular.json
@@ -84,7 +84,7 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
-            "assets": ["src/favicon.ico", "src/assets", "src/_redirects"],
+            "assets": ["src/favicon.ico", "src/assets"],
             "styles": ["src/styles.sass"],
             "scripts": []
           }
