--- a/my-recipe-app/angular.json
+++ b/my-recipe-app/angular.json
@@ -20,13 +20,13 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "my-recipe-app/dist/my-recipe-app",
+            "outputPath": "dist/my-recipe-app",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
             "aot": true,
-            "assets": ["src/favicon.ico", "src/assets"],
+            "assets": ["src/favicon.ico", "src/assets", "src/_redirects"],
             "styles": ["src/styles.sass"],
             "scripts": []
           },
